fix(NavButton): make sure it is not visible on high resolutions

--- a/src/components/Nav/NavButton/style.css
+++ b/src/components/Nav/NavButton/style.css
@@ -1,5 +1,6 @@
 .e-nav-button {
   align-items: center;
+  display: flex;
   transition: color var(--e-time-1) var(--e-easing-standard);
 }
 
